syntax = "proto2";

option java_package = "org.microg.vending.licensing.proto";
option java_multiple_files = true;

message LicenseCheckV1Response {
  optional uint32 result = 1;
  optional string signedData = 2;
  optional string signature = 3;

}

message LicenseCheckV2Response {
  optional AppLicense license = 1;
}

message AppLicense {
  optional string jwt = 1;
}